--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+spring.profiles.active: engineering
+
 app:
   datasource:
     h2:
@@ -11,4 +13,3 @@ app:
       username: root
       password:
       driverClassName: com.mysql.cj.jdbc.Driver
-
